--- a/.gitignore
+++ b/.gitignore
@@ -2,18 +2,13 @@
 # An * ensures that everything will be ignored.
 *
 
-# You can whitelist files/folders with !, these will not be ignored.
+# Whitelist Files
 !*.yaml
 !.gitignore
 !*.md
-!.themes
 
-# Ignore folders.
-.storage
-.cloud
-.google.token
+# Whitelist Folders
+!themes
 
 # Ensure these YAML files are ignored, otherwise your secret data/credentials will leak.
-ip_bans.yaml
 secrets.yaml
-known_devices.yaml
