--- a/configuration.yaml
+++ b/configuration.yaml
@@ -11,3 +11,15 @@ automation: !include automations.yaml
 script: !include scripts.yaml
 scene: !include scenes.yaml
 light: !include lights.yaml
+
+#themes
+frontend:
+  themes: !include_dir_merge_named themes
+
+#sensors
+sensor:
+  - platform: afvalwijzer
+    provider: afvalstoffendienstkalender
+    zipcode: !secret house_zipcode
+    housenumber: !secret house_number
+    count_today: true
