--- a/configuration.yaml
+++ b/configuration.yaml
@@ -13,6 +13,10 @@ script: !include scripts.yaml
 scene: !include scenes.yaml
 light: !include lights.yaml
 
+#whitelist directory
+whitelist_external_dirs:
+  - '/config/'
+
 # Themes
 frontend:
   themes: !include_dir_merge_named themes
