Include folder added

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 
 # Whitelist Folders
 !themes
+!includes
 
 # Ensure these YAML files are ignored, otherwise your secret data/credentials will leak.
 secrets.yaml
