--- a/configuration.yaml
+++ b/configuration.yaml
@@ -1,6 +1,9 @@
-
-# Configure a default setup of Home Assistant (frontend, api, etc)
+---
+#Core Configuration
+homeassistant: !include includes/homeassistant.yaml
 default_config:
+frontend:
+  themes: !include_dir_merge_named themes
 
 # Text to speech
 tts:
@@ -13,49 +16,15 @@ script: !include scripts.yaml
 scene: !include scenes.yaml
 light: !include lights.yaml
 
-#whitelist directory
-whitelist_external_dirs:
-  - '/config/'
-
-# Themes
-frontend:
-  themes: !include_dir_merge_named themes
-
-# Sensors
-sensor: !include sensors.yaml
-
-# Unifi
-unifiprotect:
-  host: !secret unifi_host
-  username: !secret unifi_username
-  password: !secret unifi_password
-  port: !secret unifi_port
-
-# Camera
-camera:
-  - platform: unifiprotect
-  - platform: badnest
-
-#Binary sensor
-binary_sensor:
-  - platform: unifiprotect
-
-#Nest
-badnest:
-  user_id: !secret nest_user_id
-  access_token: !secret nest_access_token
-  region: eu
-
-climate:
-  - platform: badnest
-    scan_interval: 10
-
-#spotify
-spotify:
-  client_id: !secret spotify_client_id
-  client_secret: !secret spotify_client_secret
+# Others
+sensor: !include includes/sensors.yaml
+unifiprotect: !include includes/unifiprotect.yaml
+camera: !include includes/cameras.yaml
+binary_sensor: !include includes/binary_sensors.yaml
+badnest: !include includes/badnest.yaml
+climate: !include includes/climate.yaml
+spotify: !include includes/spotify.yaml
 
 #=== Database Purging
 recorder:
   purge_keep_days: 30
-  purge_interval: 1
