big update - lights/ui/vacuum

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -1,5 +1,4 @@
----
-#Core Configuration
+# Core Configuration
 homeassistant: !include includes/homeassistant.yaml
 default_config:
 frontend:
@@ -9,14 +8,18 @@ frontend:
 tts:
   - platform: google_translate
 
-# Include
-group: !include groups.yaml
+# Logging and history
+recorder: !include includes/recorder.yaml
+
+# Managed via UI
 automation: !include automations.yaml
 script: !include scripts.yaml
 scene: !include scenes.yaml
-light: !include lights.yaml
 
-# Others
+# Include
+zone: !include includes/zones.yaml
+group: !include includes/groups.yaml
+light: !include includes/lights.yaml
 sensor: !include includes/sensors.yaml
 unifiprotect: !include includes/unifiprotect.yaml
 camera: !include includes/cameras.yaml
@@ -24,7 +27,18 @@ binary_sensor: !include includes/binary_sensors.yaml
 badnest: !include includes/badnest.yaml
 climate: !include includes/climate.yaml
 spotify: !include includes/spotify.yaml
+weather: !include includes/weather.yaml
+notify: !include includes/notify.yaml
+proximity: !include includes/proximity.yaml
+webostv: !include includes/webostv.yaml
+speedtestdotnet: !include includes/speedtestdotnet.yaml
+vacuum: !include includes/vacuum.yaml
+discovery: !include includes/discovery.yaml
+sabnzbd: !include includes/sabnzbd.yaml
 
-#=== Database Purging
-recorder:
-  purge_keep_days: 30
+#to configure
+#wake_on_lan: !include includes/wake_on_lan.yaml
+#homekit: !include includes/homekit.yaml
+#mqtt: !include includes/mqtt.yaml
+#utility_meter: !include includes/utility_meter.yaml
+
