--- a/includes/groups.yaml
+++ b/includes/groups.yaml
@@ -22,19 +22,19 @@ iphone_wesley:
   - sensor.steps_iphone_wesley
   - device_tracker.iphone_wesley
 
-iphone_marcella:
-  - sensor.activity_iphone_marcella
-  - sensor.average_active_iphone_marcella
-  - sensor.bssid_iphone_marcella
-  - sensor.battery_level_iphone_marcella
-  - sensor.battery_state_iphone_marcella
-  - sensor.connection_type_iphone_marcella
-  - sensor.distance_iphone_marcella
-  - sensor.floors_ascended_iphone_marcella
-  - sensor.floors_descended_iphone_marcella
-  - sensor.geocoded_location_iphone_marcella
-  - sensor.last_update_trigger_iphone_marcella
-  - sensor.sim_iphone_marcella
-  - sensor.ssid_iphone_marcella
-  - sensor.steps_iphone_marcella
-  - device_tracker.iphone_marcella
+iphone_fenne:
+  - sensor.activity_iphone_fenne
+  - sensor.average_active_iphone_fenne
+  - sensor.bssid_iphone_fenne
+  - sensor.battery_level_iphone_fenne
+  - sensor.battery_state_iphone_fenne
+  - sensor.connection_type_iphone_fenne
+  - sensor.distance_iphone_fenne
+  - sensor.floors_ascended_iphone_fenne
+  - sensor.floors_descended_iphone_fenne
+  - sensor.geocoded_location_iphone_fenne
+  - sensor.last_update_trigger_iphone_fenne
+  - sensor.sim_iphone_fenne
+  - sensor.ssid_iphone_fenne
+  - sensor.steps_iphone_fenne
+  - device_tracker.iphone_fenne
