--- a/includes/homeassistant.yaml
+++ b/includes/homeassistant.yaml
@@ -5,8 +5,8 @@ longitude: !secret longitude_home
 elevation: 0
 unit_system: metric
 time_zone: Europe/Amsterdam
-external_url: "https://lbl16.duckdns.org"
-internal_url: "http://192.168.1.191:8123"
+external_url: !secret ext_url
+internal_url: !secret int_url
 whitelist_external_dirs:
   - /config/
 customize:
