Automations change + integrations edit

--- a/integrations/notify.yaml
+++ b/integrations/notify.yaml
@@ -1,7 +1,2 @@
 # Notify
-notify:
-  - platform: group
-    name: all_iphones
-    services:
-      - service: mobile_app_iphone_wesley
-      - service: mobile_app_iphone
+notify: !include_dir_list ../entities/notifiers
