--- a/automations/downstairs/lights_off.yaml
+++ b/automations/downstairs/lights_off.yaml
@@ -3,20 +3,14 @@ description: Automatically turn off lights downstairs
 id: 234e3ce7-a618-4ef9-9408-c283c52d7413
 alias: turn_lights_off_downstairs
 trigger:
-  - platform: state
-    entity_id: sun.sun
-condition:
-  - condition: state
-    entity_id: light.downstairs
-    state: 'on'
-  - condition: numeric_state
-    entity_id: sun.sun
-    value_template: >-
-      {{ state_attr('sun.sun', 'elevation') }}
-    above: 1.0
+  platform: state
+  entity_id: binary_sensor.activity_in_living_room
+  to: 'off'
+  for:
+    minutes: 60
 action:
-  - service: light.turn_off
+  - service: scene.turn_on
+    entity_id: scene.downstairs_off
+  - service: notify.wesley_telegram
     data:
-      entity_id:
-        - light.downstairs
-      transition: 5
+      message: Lights turned off downstairs
