--- a/automations/downstairs/lights_on.yaml
+++ b/automations/downstairs/lights_on.yaml
@@ -4,7 +4,7 @@ id: 86dcb4d5-d8fb-4209-b5e0-ef6bb60d9084
 alias: turn_lights_on_downstairs
 trigger:
   platform: state
-  entity_id: binary_sensor.living_room_sensor_motion
+  entity_id: binary_sensor.activity_in_living_room
   to: 'on'
 condition:
   condition: and
@@ -22,8 +22,7 @@ action:
   - service: light.turn_on
     data:
       entity_id: light.downstairs
-      transition: 2
-      brightness_pct: 70
+      brightness_pct: 60
   - service: notify.wesley_telegram
     data:
       message: Lights turned on downstairs
