--- a/entities/switches/light_brightness.yaml
+++ b/entities/switches/light_brightness.yaml
@@ -12,5 +12,6 @@ lights_ct:
   - light.hue_ambiance_spot_6
   - light.hue_ambiance_spot_7
   - light.hue_ambiance_spot_8
-  - light.hue_ambiance_spot_hall
   - light.hue_filament_bulb_1
+#  - light.hue_ambiance_spot_hall
+max_brightness: 75
