--- a/entities/sensors/openhardwaremonitor.yaml
+++ b/entities/sensors/openhardwaremonitor.yaml
@@ -1,4 +1,4 @@
 # openhardwaremonitor
-platform: openhardwaremonitor
-host: !secret ohm_host
-port: !secret ohm_port
+# platform: openhardwaremonitor
+# host: !secret ohm_host
+# port: !secret ohm_port
