--- a/integrations/webostv.yaml
+++ b/integrations/webostv.yaml
@@ -6,3 +6,11 @@ webostv:
     service: wake_on_lan.send_magic_packet
     data:
       mac: !secret tv_mac_address
+  customize:
+    sources:
+      - Denon
+      - Netflix
+      - Plex
+      - Disney+
+      - Youtube
+      - Apple TV
