--- a/entities/sensors/template.yaml
+++ b/entities/sensors/template.yaml
@@ -17,3 +17,23 @@ sensors:
       {% set d, h, m = d[:-1] | int, h[:-1] | int, m[:-1] | int %}
       {% set hours_outside = ((14 - d) * 86400 - h * 3600 - m * 60) / 3600 %}
       {{ (hours_outside / 14) | round(1) }}
+
+  power_day_eur:
+    friendly_name: Power day euro
+    value_template: "{{ states('sensor.power_high_day_euro') | float + states('sensor.power_low_day_euro') | float | round(2) }}"
+    unit_of_measurement: "€"
+        
+  power_month_eur:
+    friendly_name: Power month euro
+    value_template: "{{ states('sensor.power_high_month_euro') | float + states('sensor.power_low_month_euro') | float | round(2) }}"
+    unit_of_measurement: "€"
+
+  utility_day_eur:
+    friendly_name: Utility day euro
+    value_template: "{{ states('sensor.gas_day_euro') | float + states('sensor.power_day_eur') | float | round(2) }}"
+    unit_of_measurement: "€"
+
+  utility_month_eur:
+    friendly_name: Utility month euro
+    value_template: "{{ states('sensor.gas_month_euro') | float + states('sensor.power_month_eur') | float | round(2) }}"
+    unit_of_measurement: "€"
