--- a/entities/binary_sensors/template.yaml
+++ b/entities/binary_sensors/template.yaml
@@ -5,7 +5,9 @@ sensors:
     friendly_name: Any motion detected
     value_template: >
       {{ is_state("binary_sensor.activity_in_living_room", "on")
-        or is_state("binary_sensor.activity_in_hallway", "on") }}
+        or is_state("binary_sensor.activity_in_hallway", "on")
+        or is_state("binary_sensor.activity_in_study_room", "on") 
+        or is_state("binary_sensor.activity_in_landing", "on") }}
 
   motion_detected_in_last_hour:
     friendly_name: Any motion detected in last hour
@@ -29,6 +31,18 @@ sensors:
     friendly_name: Activity in the hallway
     value_template: >
       {{ is_state("binary_sensor.hallway_sensor_motion", "on") }}
+    delay_off: "00:02:00"
+
+  activity_in_study_room:
+    friendly_name: Activity in the study room
+    value_template: >
+      {{ is_state("binary_sensor.aqara_sensor_motion_study_ias_zone", "on") }}
+    delay_off: "00:02:00"
+
+  activity_in_landing:
+    friendly_name: Activity in the landing
+    value_template: >
+      {{ is_state("binary_sensor.aqara_sensor_motion_landing_ias_zone", "on") }}
     delay_off: "00:02:00"
 
   any_light_on:
