--- a/entities/binary_sensors/template.yaml
+++ b/entities/binary_sensors/template.yaml
@@ -24,7 +24,7 @@ sensors:
   activity_in_living_room:
     friendly_name: Activity in the living room
     value_template: >
-      {{ is_state("sensor.aeotec_limited_zwa005_trisensor_burglar", "8") }}
+      {{ is_state("binary_sensor.aqara_sensor_motion_living_room_ias_zone", "on") }}
     delay_off: "00:02:00"
 
   activity_in_hallway:
