--- a/entities/lights/downstairs.yaml
+++ b/entities/lights/downstairs.yaml
@@ -14,3 +14,4 @@ entities:
   - light.hue_ambiance_spot_6
   - light.hue_ambiance_spot_7
   - light.hue_ambiance_spot_8
+  - light.hue_filament_bulb_1
