--- a/scenes.yaml
+++ b/scenes.yaml
@@ -1,106 +1,49 @@
-- id: '1590530798003'
-  name: Downstairs off
-  entities:
-    light.hue_ambiance_spot_1:
-      friendly_name: Hue ambiance spot 1
-      max_mireds: 454
-      min_mireds: 153
-      state: 'off'
-      supported_features: 43
-    light.hue_ambiance_spot_2:
-      friendly_name: Hue ambiance spot 2
-      max_mireds: 454
-      min_mireds: 153
-      state: 'off'
-      supported_features: 43
-    light.hue_ambiance_spot_3:
-      friendly_name: Hue ambiance spot 3
-      max_mireds: 454
-      min_mireds: 153
-      state: 'off'
-      supported_features: 43
-    light.hue_ambiance_spot_4:
-      friendly_name: Hue ambiance spot 4
-      max_mireds: 454
-      min_mireds: 153
-      state: 'off'
-      supported_features: 43
-    light.hue_ambiance_spot_5:
-      friendly_name: Hue ambiance spot 5
-      max_mireds: 454
-      min_mireds: 153
-      state: 'off'
-      supported_features: 43
-    light.hue_ambiance_spot_6:
-      friendly_name: Hue ambiance spot 6
-      max_mireds: 454
-      min_mireds: 153
-      state: 'off'
-      supported_features: 43
-    light.hue_ambiance_spot_7:
-      friendly_name: Hue ambiance spot 7
-      max_mireds: 454
-      min_mireds: 153
-      state: 'off'
-      supported_features: 43
-    light.hue_ambiance_spot_8:
-      friendly_name: Hue ambiance spot 8
-      max_mireds: 454
-      min_mireds: 153
-      state: 'off'
-      supported_features: 43
-    light.hue_filament_bulb_1:
-      friendly_name: Hue filament bulb 1
-      state: 'off'
-      supported_features: 41
-    light.hue_runner_middle_room_1:
-      friendly_name: Hue Runner middle room 1
-      icon: mdi:track-light
-      max_mireds: 454
-      min_mireds: 153
-      state: 'off'
-      supported_features: 43
-    light.hue_runner_middle_room_2:
-      friendly_name: Hue Runner middle room 2
-      icon: mdi:track-light
-      max_mireds: 454
-      min_mireds: 153
-      state: 'off'
-      supported_features: 43
-    light.living_room_1:
-      friendly_name: Living Room 1
-      icon: mdi:floor-lamp
-      max_mireds: 454
-      min_mireds: 153
-      state: 'off'
-      supported_features: 43
-    light.living_room_2:
-      friendly_name: Living Room 2
-      icon: mdi:floor-lamp
-      max_mireds: 454
-      min_mireds: 153
-      state: 'off'
-      supported_features: 43
 - id: '1590604856514'
-  name: Upstairs 80
+  name: Upstairs 60
   entities:
     light.hue_white_lamp_bedroom:
       brightness: 155
-      friendly_name: Hue white lamp bedroom
+      friendly_name: Bedroom
+      icon: mdi:bed-king
       state: 'on'
       supported_features: 41
     light.hue_white_lamp_studyroom:
       brightness: 155
-      friendly_name: Hue white lamp studyroom
+      friendly_name: Study
+      icon: mdi:desk-lamp
       state: 'on'
       supported_features: 41
 - id: '1591109684054'
   name: Goodnight
   entities:
+    input_boolean.sleep_mode:
+      editable: true
+      friendly_name: Sleep mode
+      icon: mdi:bed-king
+      state: 'on'
     light.downstairs:
+      entity_id:
+      - light.living_room_1
+      - light.living_room_2
+      - light.hue_runner_middle_room_1
+      - light.hue_runner_middle_room_2
+      - light.hue_ambiance_spot_1
+      - light.hue_ambiance_spot_2
+      - light.hue_ambiance_spot_3
+      - light.hue_ambiance_spot_4
+      - light.hue_ambiance_spot_5
+      - light.hue_ambiance_spot_6
+      - light.hue_ambiance_spot_7
+      - light.hue_ambiance_spot_8
       friendly_name: Downstairs
-      icon: mdi:home
       max_mireds: 454
       min_mireds: 153
       state: 'off'
       supported_features: 43
+    light.upstairs:
+      entity_id:
+      - light.hue_white_lamp_studyroom
+      - light.hue_white_lamp_bedroom
+      friendly_name: Upstairs
+      state: 'off'
+      supported_features: 41
