--- a/integrations/badnest.yaml
+++ b/integrations/badnest.yaml
@@ -1,5 +1,4 @@
 # Badnest
 badnest:
-  user_id: !secret nest_user_id
-  access_token: !secret nest_access_token
-  region: eu
+  issue_token: !secret nest_issue_token
+  cookie: !secret nest_cookie
