--- a/entities/media_players/openwebif.yaml
+++ b/entities/media_players/openwebif.yaml
@@ -1,7 +1,7 @@
 # openwebif
 platform: enigma2
-host: 192.168.20.18
-port: 80
+host: !secret vu_host
+port: !secret vu_port
 name: VuDuo2
 username: !secret vu_user
 password: !secret vu_pass
