--- a/integrations/badnest.yaml
+++ b/integrations/badnest.yaml
@@ -1,4 +1,4 @@
 # Badnest
-badnest:
-  issue_token: !secret nest_issue_token
-  cookie: !secret nest_cookie
+#badnest:
+#  issue_token: !secret nest_issue_token
+#  cookie: !secret nest_cookie
