--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 !customizations
 !automations/
 !automations/*
+!entities/sensors/*
 
 # Ensure these YAML files are ignored, otherwise your secret data/credentials will leak.
 secrets.yaml
