--- a/entities/sensors/template.yaml
+++ b/entities/sensors/template.yaml
@@ -26,23 +26,28 @@ sensors:
 
   power_day_eur:
     friendly_name: Power day euro
-    value_template: "{{ states('sensor.power_high_day_euro') | float + states('sensor.power_low_day_euro') | float | round(2) }}"
+    value_template: "{{ states('sensor.power_high_day_euro') | float + states('sensor.power_low_day_euro') | float | round(1) }}"
     unit_of_measurement: "€"
         
   power_month_eur:
     friendly_name: Power month euro
-    value_template: "{{ states('sensor.power_high_month_euro') | float + states('sensor.power_low_month_euro') | float | round(2) }}"
+    value_template: "{{ states('sensor.power_high_month_euro') | float + states('sensor.power_low_month_euro') | float | round(1) }}"
     unit_of_measurement: "€"
 
   utility_day_eur:
     friendly_name: Utility day euro
-    value_template: "{{ states('sensor.gas_day_euro') | float + states('sensor.power_day_eur') | float | round(2) }}"
+    value_template: "{{ states('sensor.gas_day_euro') | float + states('sensor.power_day_eur') | float | round(1) }}"
     unit_of_measurement: "€"
 
   utility_month_eur:
     friendly_name: Utility month euro
-    value_template: "{{ states('sensor.gas_month_euro') | float + states('sensor.power_month_eur') | float | round(2) }}"
+    value_template: "{{ states('sensor.gas_month_euro') | float + states('sensor.power_month_eur') | float | round(1) }}"
     unit_of_measurement: "€"
+
+  power_current_se:
+    friendly_name: Solaredge Current Power
+    value_template: "{{ states('sensor.solaredge_current_power') | float | round(1) }}"
+    unit_of_measurement: "W"
 
   adaptive_lighting_color_temp_mired:
     unit_of_measurement: "mired"
@@ -60,3 +65,5 @@ sensors:
     unit_of_measurement: "%"
     value_template: >
       {{ 100 * state_attr("switch.adaptive_lighting_downstairs", "sun_position") }}
+
+      
