--- a/entities/lights/downstairs.yaml
+++ b/entities/lights/downstairs.yaml
@@ -1,6 +1,6 @@
 # Light Group Downstairs
 platform: group
-name: Downstairs
+name: Downstairs Lights
 entities:
   - light.living_room_1
   - light.living_room_2
