--- a/entities/lights/middle_room.yaml
+++ b/entities/lights/middle_room.yaml
@@ -1,6 +1,6 @@
 # Light Group Middle Room
 platform: group
-name: Middle Room
+name: Middle Room Lights
 entities:
   - light.hue_runner_middle_room_1
   - light.hue_runner_middle_room_2
