--- a/entities/lights/outside.yaml
+++ b/entities/lights/outside.yaml
@@ -1,6 +1,6 @@
 # Light Group Outside
 platform: group
-name: Outside Lights
+name: Outside
 entities:
   - light.hue_white_lamp_outside_back
   - light.hue_white_lamp_outside_front
