--- a/entities/lights/hallway.yaml
+++ b/entities/lights/hallway.yaml
@@ -1,6 +1,6 @@
 # Light Group Hallway
 platform: group
-name: Hallway Lights
+name: Hallway
 entities:
   - light.hue_being_ceiling_hallway
   - light.hue_ambiance_spot_hall
